🐛 Change z-index value of $fixed-level

--- a/styles/constants/_z-indexes.scss
+++ b/styles/constants/_z-indexes.scss
@@ -2,4 +2,4 @@ $overlay-level: 100;
 $sidebar-level: 200;
 $modal-level: 200;
 
-$fixed-level: 1000;
+$fixed-level: 100;
